HW3/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Unused terminals:

    NULL

Grammar

Rule 0     S' -> pgm
Rule 1     pgm -> class_decl_list
Rule 2     class_decl_list -> class_decl class_decl_list
Rule 3     class_decl_list -> <empty>
Rule 4     class_decl -> CLASS ID extends LBRACE class_body_decl_list RBRACE
Rule 5     class_decl -> CLASS ID extends LBRACE error RBRACE
Rule 6     extends -> EXTENDS ID
Rule 7     extends -> <empty>
Rule 8     class_body_decl_list -> class_body_decl_list class_body_decl
Rule 9     class_body_decl_list -> class_body_decl
Rule 10    class_body_decl -> field_decl
Rule 11    class_body_decl -> method_decl
Rule 12    class_body_decl -> constructor_decl
Rule 13    field_decl -> mod var_decl
Rule 14    method_decl -> mod VOID ID LPAREN param_list_opt RPAREN block
Rule 15    method_decl -> mod type ID LPAREN param_list_opt RPAREN block
Rule 16    constructor_decl -> mod ID LPAREN param_list_opt RPAREN block
Rule 17    mod -> visibility_mod storage_mod
Rule 18    visibility_mod -> PUBLIC
Rule 19    visibility_mod -> PRIVATE
Rule 20    visibility_mod -> <empty>
Rule 21    storage_mod -> STATIC
Rule 22    storage_mod -> <empty>
Rule 23    var_decl -> type var_list SEMICOLON
Rule 24    type -> INT
Rule 25    type -> BOOLEAN
Rule 26    type -> FLOAT
Rule 27    type -> ID
Rule 28    var_list -> var_list COMMA var
Rule 29    var_list -> var
Rule 30    var -> ID
Rule 31    var -> var LBRACKET RBRACKET
Rule 32    param_list_opt -> param_list
Rule 33    param_list_opt -> <empty>
Rule 34    param_list -> param_list COMMA param
Rule 35    param_list -> param
Rule 36    param -> type var
Rule 37    block -> LBRACE stmt_list RBRACE
Rule 38    block -> LBRACE stmt_list error RBRACE
Rule 39    stmt_list -> <empty>
Rule 40    stmt_list -> stmt_list stmt
Rule 41    stmt -> IF LPAREN expr RPAREN stmt ELSE stmt
Rule 42    stmt -> IF LPAREN expr RPAREN stmt
Rule 43    stmt -> WHILE LPAREN expr RPAREN stmt
Rule 44    stmt -> FOR LPAREN stmt_expr_opt SEMICOLON expr_opt SEMICOLON stmt_expr_opt RPAREN stmt
Rule 45    stmt -> RETURN expr_opt SEMICOLON
Rule 46    stmt -> stmt_expr SEMICOLON
Rule 47    stmt -> BREAK SEMICOLON
Rule 48    stmt -> CONTINUE SEMICOLON
Rule 49    stmt -> block
Rule 50    stmt -> var_decl
Rule 51    stmt -> error SEMICOLON
Rule 52    literal -> INT_CONST
Rule 53    literal -> FLOAT_CONST
Rule 54    literal -> STRING_CONST
Rule 55    literal -> TRUE
Rule 56    literal -> FALSE
Rule 57    primary -> literal
Rule 58    primary -> THIS
Rule 59    primary -> SUPER
Rule 60    primary -> LPAREN expr RPAREN
Rule 61    primary -> NEW ID LPAREN args_opt RPAREN
Rule 62    primary -> lhs
Rule 63    primary -> method_invocation
Rule 64    args_opt -> arg_plus
Rule 65    args_opt -> <empty>
Rule 66    arg_plus -> arg_plus COMMA expr
Rule 67    arg_plus -> expr
Rule 68    lhs -> field_access
Rule 69    lhs -> array_access
Rule 70    field_access -> primary DOT ID
Rule 71    field_access -> ID
Rule 72    array_access -> primary LBRACKET expr RBRACKET
Rule 73    method_invocation -> field_access LPAREN args_opt RPAREN
Rule 74    expr -> primary
Rule 75    expr -> assign
Rule 76    expr -> new_array
Rule 77    expr -> expr PLUS expr
Rule 78    expr -> expr MINUS expr
Rule 79    expr -> expr MULTIPLY expr
Rule 80    expr -> expr DIVIDE expr
Rule 81    expr -> expr EQ expr
Rule 82    expr -> expr NEQ expr
Rule 83    expr -> expr LT expr
Rule 84    expr -> expr LEQ expr
Rule 85    expr -> expr GT expr
Rule 86    expr -> expr GEQ expr
Rule 87    expr -> expr AND expr
Rule 88    expr -> expr OR expr
Rule 89    expr -> PLUS expr
Rule 90    expr -> MINUS expr
Rule 91    expr -> NOT expr
Rule 92    assign -> lhs ASSIGN expr
Rule 93    assign -> lhs INC
Rule 94    assign -> INC lhs
Rule 95    assign -> lhs DEC
Rule 96    assign -> DEC lhs
Rule 97    new_array -> NEW type dim_expr_plus dim_star
Rule 98    dim_expr_plus -> dim_expr_plus dim_expr
Rule 99    dim_expr_plus -> dim_expr
Rule 100   dim_expr -> LBRACKET expr RBRACKET
Rule 101   dim_star -> LBRACKET RBRACKET dim_star
Rule 102   dim_star -> <empty>
Rule 103   stmt_expr -> assign
Rule 104   stmt_expr -> method_invocation
Rule 105   stmt_expr_opt -> stmt_expr
Rule 106   stmt_expr_opt -> <empty>
Rule 107   expr_opt -> expr
Rule 108   expr_opt -> <empty>

Terminals, with rules where they appear

AND                  : 87
ASSIGN               : 92
BOOLEAN              : 25
BREAK                : 47
CLASS                : 4 5
COMMA                : 28 34 66
CONTINUE             : 48
DEC                  : 95 96
DIVIDE               : 80
DOT                  : 70
ELSE                 : 41
EQ                   : 81
EXTENDS              : 6
FALSE                : 56
FLOAT                : 26
FLOAT_CONST          : 53
FOR                  : 44
GEQ                  : 86
GT                   : 85
ID                   : 4 5 6 14 15 16 27 30 61 70 71
IF                   : 41 42
INC                  : 93 94
INT                  : 24
INT_CONST            : 52
LBRACE               : 4 5 37 38
LBRACKET             : 31 72 100 101
LEQ                  : 84
LPAREN               : 14 15 16 41 42 43 44 60 61 73
LT                   : 83
MINUS                : 78 90
MULTIPLY             : 79
NEQ                  : 82
NEW                  : 61 97
NOT                  : 91
NULL                 : 
OR                   : 88
PLUS                 : 77 89
PRIVATE              : 19
PUBLIC               : 18
RBRACE               : 4 5 37 38
RBRACKET             : 31 72 100 101
RETURN               : 45
RPAREN               : 14 15 16 41 42 43 44 60 61 73
SEMICOLON            : 23 44 44 45 46 47 48 51
STATIC               : 21
STRING_CONST         : 54
SUPER                : 59
THIS                 : 58
TRUE                 : 55
VOID                 : 14
WHILE                : 43
error                : 5 38 51

Nonterminals, with rules where they appear

arg_plus             : 64 66
args_opt             : 61 73
array_access         : 69
assign               : 75 103
block                : 14 15 16 49
class_body_decl      : 8 9
class_body_decl_list : 4 8
class_decl           : 2
class_decl_list      : 1 2
constructor_decl     : 12
dim_expr             : 98 99
dim_expr_plus        : 97 98
dim_star             : 97 101
expr                 : 41 42 43 60 66 67 72 77 77 78 78 79 79 80 80 81 81 82 82 83 83 84 84 85 85 86 86 87 87 88 88 89 90 91 92 100 107
expr_opt             : 44 45
extends              : 4 5
field_access         : 68 73
field_decl           : 10
lhs                  : 62 92 93 94 95 96
literal              : 57
method_decl          : 11
method_invocation    : 63 104
mod                  : 13 14 15 16
new_array            : 76
param                : 34 35
param_list           : 32 34
param_list_opt       : 14 15 16
pgm                  : 0
primary              : 70 72 74
stmt                 : 40 41 41 42 43 44
stmt_expr            : 46 105
stmt_expr_opt        : 44 44
stmt_list            : 37 38 40
storage_mod          : 17
type                 : 15 23 36 97
var                  : 28 29 31 36
var_decl             : 13 50
var_list             : 23 28
visibility_mod       : 17

Parsing method: LALR

state 0

    (0) S' -> . pgm
    (1) pgm -> . class_decl_list
    (2) class_decl_list -> . class_decl class_decl_list
    (3) class_decl_list -> .
    (4) class_decl -> . CLASS ID extends LBRACE class_body_decl_list RBRACE
    (5) class_decl -> . CLASS ID extends LBRACE error RBRACE

    $end            reduce using rule 3 (class_decl_list -> .)
    CLASS           shift and go to state 2

    class_decl_list                shift and go to state 4
    pgm                            shift and go to state 1
    class_decl                     shift and go to state 3

state 1

    (0) S' -> pgm .



state 2

    (4) class_decl -> CLASS . ID extends LBRACE class_body_decl_list RBRACE
    (5) class_decl -> CLASS . ID extends LBRACE error RBRACE

    ID              shift and go to state 5


state 3

    (2) class_decl_list -> class_decl . class_decl_list
    (2) class_decl_list -> . class_decl class_decl_list
    (3) class_decl_list -> .
    (4) class_decl -> . CLASS ID extends LBRACE class_body_decl_list RBRACE
    (5) class_decl -> . CLASS ID extends LBRACE error RBRACE

    $end            reduce using rule 3 (class_decl_list -> .)
    CLASS           shift and go to state 2

    class_decl_list                shift and go to state 6
    class_decl                     shift and go to state 3

state 4

    (1) pgm -> class_decl_list .

    $end            reduce using rule 1 (pgm -> class_decl_list .)


state 5

    (4) class_decl -> CLASS ID . extends LBRACE class_body_decl_list RBRACE
    (5) class_decl -> CLASS ID . extends LBRACE error RBRACE
    (6) extends -> . EXTENDS ID
    (7) extends -> .

    EXTENDS         shift and go to state 8
    LBRACE          reduce using rule 7 (extends -> .)

    extends                        shift and go to state 7

state 6

    (2) class_decl_list -> class_decl class_decl_list .

    $end            reduce using rule 2 (class_decl_list -> class_decl class_decl_list .)


state 7

    (4) class_decl -> CLASS ID extends . LBRACE class_body_decl_list RBRACE
    (5) class_decl -> CLASS ID extends . LBRACE error RBRACE

    LBRACE          shift and go to state 9


state 8

    (6) extends -> EXTENDS . ID

    ID              shift and go to state 10


state 9

    (4) class_decl -> CLASS ID extends LBRACE . class_body_decl_list RBRACE
    (5) class_decl -> CLASS ID extends LBRACE . error RBRACE
    (8) class_body_decl_list -> . class_body_decl_list class_body_decl
    (9) class_body_decl_list -> . class_body_decl
    (10) class_body_decl -> . field_decl
    (11) class_body_decl -> . method_decl
    (12) class_body_decl -> . constructor_decl
    (13) field_decl -> . mod var_decl
    (14) method_decl -> . mod VOID ID LPAREN param_list_opt RPAREN block
    (15) method_decl -> . mod type ID LPAREN param_list_opt RPAREN block
    (16) constructor_decl -> . mod ID LPAREN param_list_opt RPAREN block
    (17) mod -> . visibility_mod storage_mod
    (18) visibility_mod -> . PUBLIC
    (19) visibility_mod -> . PRIVATE
    (20) visibility_mod -> .

    error           shift and go to state 19
    PUBLIC          shift and go to state 20
    PRIVATE         shift and go to state 12
    STATIC          reduce using rule 20 (visibility_mod -> .)
    VOID            reduce using rule 20 (visibility_mod -> .)
    ID              reduce using rule 20 (visibility_mod -> .)
    INT             reduce using rule 20 (visibility_mod -> .)
    BOOLEAN         reduce using rule 20 (visibility_mod -> .)
    FLOAT           reduce using rule 20 (visibility_mod -> .)

    class_body_decl                shift and go to state 14
    field_decl                     shift and go to state 17
    constructor_decl               shift and go to state 11
    method_decl                    shift and go to state 18
    visibility_mod                 shift and go to state 15
    class_body_decl_list           shift and go to state 13
    mod                            shift and go to state 16

state 10

    (6) extends -> EXTENDS ID .

    LBRACE          reduce using rule 6 (extends -> EXTENDS ID .)


state 11

    (12) class_body_decl -> constructor_decl .

    RBRACE          reduce using rule 12 (class_body_decl -> constructor_decl .)
    PUBLIC          reduce using rule 12 (class_body_decl -> constructor_decl .)
    PRIVATE         reduce using rule 12 (class_body_decl -> constructor_decl .)
    VOID            reduce using rule 12 (class_body_decl -> constructor_decl .)
    ID              reduce using rule 12 (class_body_decl -> constructor_decl .)
    INT             reduce using rule 12 (class_body_decl -> constructor_decl .)
    BOOLEAN         reduce using rule 12 (class_body_decl -> constructor_decl .)
    FLOAT           reduce using rule 12 (class_body_decl -> constructor_decl .)
    STATIC          reduce using rule 12 (class_body_decl -> constructor_decl .)


state 12

    (19) visibility_mod -> PRIVATE .

    STATIC          reduce using rule 19 (visibility_mod -> PRIVATE .)
    VOID            reduce using rule 19 (visibility_mod -> PRIVATE .)
    ID              reduce using rule 19 (visibility_mod -> PRIVATE .)
    INT             reduce using rule 19 (visibility_mod -> PRIVATE .)
    BOOLEAN         reduce using rule 19 (visibility_mod -> PRIVATE .)
    FLOAT           reduce using rule 19 (visibility_mod -> PRIVATE .)


state 13

    (4) class_decl -> CLASS ID extends LBRACE class_body_decl_list . RBRACE
    (8) class_body_decl_list -> class_body_decl_list . class_body_decl
    (10) class_body_decl -> . field_decl
    (11) class_body_decl -> . method_decl
    (12) class_body_decl -> . constructor_decl
    (13) field_decl -> . mod var_decl
    (14) method_decl -> . mod VOID ID LPAREN param_list_opt RPAREN block
    (15) method_decl -> . mod type ID LPAREN param_list_opt RPAREN block
    (16) constructor_decl -> . mod ID LPAREN param_list_opt RPAREN block
    (17) mod -> . visibility_mod storage_mod
    (18) visibility_mod -> . PUBLIC
    (19) visibility_mod -> . PRIVATE
    (20) visibility_mod -> .

    RBRACE          shift and go to state 22
    PUBLIC          shift and go to state 20
    PRIVATE         shift and go to state 12
    STATIC          reduce using rule 20 (visibility_mod -> .)
    VOID            reduce using rule 20 (visibility_mod -> .)
    ID              reduce using rule 20 (visibility_mod -> .)
    INT             reduce using rule 20 (visibility_mod -> .)
    BOOLEAN         reduce using rule 20 (visibility_mod -> .)
    FLOAT           reduce using rule 20 (visibility_mod -> .)

    class_body_decl                shift and go to state 21
    field_decl                     shift and go to state 17
    constructor_decl               shift and go to state 11
    method_decl                    shift and go to state 18
    visibility_mod                 shift and go to state 15
    mod                            shift and go to state 16

state 14

    (9) class_body_decl_list -> class_body_decl .

    RBRACE          reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    PUBLIC          reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    PRIVATE         reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    VOID            reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    ID              reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    INT             reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    BOOLEAN         reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    FLOAT           reduce using rule 9 (class_body_decl_list -> class_body_decl .)
    STATIC          reduce using rule 9 (class_body_decl_list -> class_body_decl .)


state 15

    (17) mod -> visibility_mod . storage_mod
    (21) storage_mod -> . STATIC
    (22) storage_mod -> .

    STATIC          shift and go to state 24
    VOID            reduce using rule 22 (storage_mod -> .)
    ID              reduce using rule 22 (storage_mod -> .)
    INT             reduce using rule 22 (storage_mod -> .)
    BOOLEAN         reduce using rule 22 (storage_mod -> .)
    FLOAT           reduce using rule 22 (storage_mod -> .)

    storage_mod                    shift and go to state 23

state 16

    (13) field_decl -> mod . var_decl
    (14) method_decl -> mod . VOID ID LPAREN param_list_opt RPAREN block
    (15) method_decl -> mod . type ID LPAREN param_list_opt RPAREN block
    (16) constructor_decl -> mod . ID LPAREN param_list_opt RPAREN block
    (23) var_decl -> . type var_list SEMICOLON
    (24) type -> . INT
    (25) type -> . BOOLEAN
    (26) type -> . FLOAT
    (27) type -> . ID

    VOID            shift and go to state 26
    ID              shift and go to state 31
    INT             shift and go to state 25
    BOOLEAN         shift and go to state 28
    FLOAT           shift and go to state 27

    var_decl                       shift and go to state 29
    type                           shift and go to state 30

state 17

    (10) class_body_decl -> field_decl .

    RBRACE          reduce using rule 10 (class_body_decl -> field_decl .)
    PUBLIC          reduce using rule 10 (class_body_decl -> field_decl .)
    PRIVATE         reduce using rule 10 (class_body_decl -> field_decl .)
    VOID            reduce using rule 10 (class_body_decl -> field_decl .)
    ID              reduce using rule 10 (class_body_decl -> field_decl .)
    INT             reduce using rule 10 (class_body_decl -> field_decl .)
    BOOLEAN         reduce using rule 10 (class_body_decl -> field_decl .)
    FLOAT           reduce using rule 10 (class_body_decl -> field_decl .)
    STATIC          reduce using rule 10 (class_body_decl -> field_decl .)


state 18

    (11) class_body_decl -> method_decl .

    RBRACE          reduce using rule 11 (class_body_decl -> method_decl .)
    PUBLIC          reduce using rule 11 (class_body_decl -> method_decl .)
    PRIVATE         reduce using rule 11 (class_body_decl -> method_decl .)
    VOID            reduce using rule 11 (class_body_decl -> method_decl .)
    ID              reduce using rule 11 (class_body_decl -> method_decl .)
    INT             reduce using rule 11 (class_body_decl -> method_decl .)
    BOOLEAN         reduce using rule 11 (class_body_decl -> method_decl .)
    FLOAT           reduce using rule 11 (class_body_decl -> method_decl .)
    STATIC          reduce using rule 11 (class_body_decl -> method_decl .)


state 19

    (5) class_decl -> CLASS ID extends LBRACE error . RBRACE

    RBRACE          shift and go to state 32


state 20

    (18) visibility_mod -> PUBLIC .

    STATIC          reduce using rule 18 (visibility_mod -> PUBLIC .)
    VOID            reduce using rule 18 (visibility_mod -> PUBLIC .)
    ID              reduce using rule 18 (visibility_mod -> PUBLIC .)
    INT             reduce using rule 18 (visibility_mod -> PUBLIC .)
    BOOLEAN         reduce using rule 18 (visibility_mod -> PUBLIC .)
    FLOAT           reduce using rule 18 (visibility_mod -> PUBLIC .)


state 21

    (8) class_body_decl_list -> class_body_decl_list class_body_decl .

    RBRACE          reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    PUBLIC          reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    PRIVATE         reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    VOID            reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    ID              reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    INT             reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    BOOLEAN         reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    FLOAT           reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)
    STATIC          reduce using rule 8 (class_body_decl_list -> class_body_decl_list class_body_decl .)


state 22

    (4) class_decl -> CLASS ID extends LBRACE class_body_decl_list RBRACE .

    CLASS           reduce using rule 4 (class_decl -> CLASS ID extends LBRACE class_body_decl_list RBRACE .)
    $end            reduce using rule 4 (class_decl -> CLASS ID extends LBRACE class_body_decl_list RBRACE .)


state 23

    (17) mod -> visibility_mod storage_mod .

    VOID            reduce using rule 17 (mod -> visibility_mod storage_mod .)
    ID              reduce using rule 17 (mod -> visibility_mod storage_mod .)
    INT             reduce using rule 17 (mod -> visibility_mod storage_mod .)
    BOOLEAN         reduce using rule 17 (mod -> visibility_mod storage_mod .)
    FLOAT           reduce using rule 17 (mod -> visibility_mod storage_mod .)


state 24

    (21) storage_mod -> STATIC .

    VOID            reduce using rule 21 (storage_mod -> STATIC .)
    ID              reduce using rule 21 (storage_mod -> STATIC .)
    INT             reduce using rule 21 (storage_mod -> STATIC .)
    BOOLEAN         reduce using rule 21 (storage_mod -> STATIC .)
    FLOAT           reduce using rule 21 (storage_mod -> STATIC .)


state 25

    (24) type -> INT .

    ID              reduce using rule 24 (type -> INT .)
    LBRACKET        reduce using rule 24 (type -> INT .)


state 26

    (14) method_decl -> mod VOID . ID LPAREN param_list_opt RPAREN block

    ID              shift and go to state 33


state 27

    (26) type -> FLOAT .

    ID              reduce using rule 26 (type -> FLOAT .)
    LBRACKET        reduce using rule 26 (type -> FLOAT .)


state 28

    (25) type -> BOOLEAN .

    ID              reduce using rule 25 (type -> BOOLEAN .)
    LBRACKET        reduce using rule 25 (type -> BOOLEAN .)


state 29

    (13) field_decl -> mod var_decl .
